@@ -1,4 +1,5 @@
 ---version 2.0.3 yet to be released---
+19-oct-2008 - shinydoofy - [ 2179829 ] user ability to toggle "bind savestates to movie" added for SDL, default hotkey F2
 19-oct-2008 - adelikat - winew - added a toggle for binding savestates to movies
 18-oct-2008 - adelikat - Win32 - added -cfg (config file) command line argument
 08-oct-2008 - zeromus - SF [ 2073105 ] Laptop Volume Control keys make FCEUX go crazy and crash
